def/force-app/main/default/objects/Offering__c/fields/Description_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Description_Text_Area__c</fullName>
    <label>Description Text Area</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>