def/force-app/main/default/objects/Offering__c/fields/ManagerUserIDLookupRel__c.field-meta.xml
<CustomField>
    <fullName>ManagerUserIDLookupRel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>