def/force-app/main/default/objects/Offering__c/fields/Offering_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Offering_Name_Text__c</fullName>
    <label>Offering Name Text</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>