def/force-app/main/default/objects/Offering__c/fields/Sub_Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Line_Text__c</fullName>
    <label>Sub Product Line Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>